<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="0dp"
    card_view:cardCornerRadius="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/recent_result"
            style="@style/MaterialLightBody2SectionHeaders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/my_health.description_heading_recent_result_1144" />

        <TextView
            android:id="@+id/attribute_value"
            style="@style/MaterialLightSubheadH3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/feedbackattribute_vertical_margin_large" />

        <TextView
            android:id="@+id/feedback_name"
            style="@style/MyHealthAttributeTipFeedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/feedbackattribute_vertical_margin" />


        <TextView
            android:id="@+id/feedback_placeholder"
            style="@style/MaterialLightBody1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/feedbackattribute_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/my_health.physical_activity_capture_result_message_1075"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/recommended_result_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#1e000000" />

            <TextView
                style="@style/MaterialLightBody2SectionHeaders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/feedbackattribute_vertical_margin"
                android:text="@string/detail_screen.recommended_result_title_1076" />

            <TextView
                android:id="@+id/recommended_value"
                style="@style/MaterialLightSubheadMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/feedbackattribute_vertical_margin"
                android:layout_marginTop="@dimen/feedbackattribute_vertical_margin" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/whyisitimportant_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#1e000000" />

            <TextView
                android:id="@+id/recommendation_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/feedbackattribute_vertical_margin"
                android:fontFamily="sans-serif-medium"
                android:text="@string/detail_screen.why_is_this_important_title_1077"
                android:textColor="@color/light_disabled_38"
                android:textSize="14sp"
                android:textStyle="normal" />

            <com.vitalityactive.va.myhealth.healthattributes.ExpandableTextview
                android:id="@+id/feedback_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/feedbackattribute_vertical_margin"
                android:layout_marginTop="@dimen/feedbackattribute_vertical_margin"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/text_view"
                    style="@style/MaterialLightBody1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="@dimen/feedbackattribute_horizontal_margin"
                    android:layout_toLeftOf="@+id/expand_more"
                    android:layout_weight=".85"
                    android:ellipsize="end"
                    android:maxLines="3" />

                <ImageView
                    android:id="@+id/expand_more"
                    android:layout_width="@dimen/profile_icon_size"
                    android:layout_height="@dimen/profile_icon_size"
                    android:layout_weight=".15"
                    android:src="@drawable/expand_more" />
            </com.vitalityactive.va.myhealth.healthattributes.ExpandableTextview>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/myhealth_feedback_attribute_source_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#1e000000" />

            <TextView
                style="@style/MaterialLightBody2SectionHeaders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/feedbackattribute_vertical_margin"
                android:text="@string/detail_screen.source_title_198" />

            <TextView
                android:id="@+id/source_origin"
                style="@style/MaterialLightSubheadMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/feedbackattribute_vertical_margin_large" />

            <TextView
                android:id="@+id/source_date"
                style="@style/MaterialLightCaptionSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>