...
    <string name="feedback_tips_whatdoingwell_missing" translatable="false">Looks like there are no results in the healthy range. Make use of the tips and results in the \'what you can improve\' section.</string>

    <string name="vitality_membership_pass_label" translatable="false">Vitality membership pass</string>
    <string name="vitality_membership_pass_email_content" translatable="false">Click on the link below to see a full set of</string>

    <string name="myhealth_feedback_attribute_tips_more_tips" translatable="false">MORE TIPS</string>
    <string name="myhealth_feedback_attribute_recommended_recent_result" translatable="false">Recent Result</string>
    <string name="myhealth_feedback_attribute_recommended_recommended_result" translatable="false">Recommended Result</string>
    <string name="feedback_attribute_section_title_result_good" translatable="false">Tips to Maintain</string>
    <string name="feedback_attribute_section_title_result_whattoimprove" translatable="false">Tips to Improve</string>
    <string name="feedback_attribute_section_title_result_whatnotprovided" translatable="false">Tips of Importance</string>
    <string name="myhealth_feedback_attribute_recommended_why_is_this_important" translatable="false">Why is this important?</string>
    <string name="myhealth_attribute_tested_on_date" translatable="false">Tested on %1$s</string>
    <string name="myhealth_feedback_attribute_placeholder" translatable="false">Complete the Lifestyle Habits Section in the Vitality Health Review to provide information about your physical activity</string>
    <string name="myhealth_feedback_attribute_capture_result" translatable="false">Capture Result</string> <!-- Temporary -->


    <string name="myhealth_feedback_tip_detail_title" translatable="false">Tip</string> <!-- Temporary -->
    <string name="myhealth_feedback_self_submitted" translatable="false">Self Submitted</string>
    <string name="my_health_learn_more_vitality_age_above_outdated_description" translatable="false">Your previous Vitality Age of %s was too high, however it is currently outdated. You need to retake the Vitality Health Review assessment every membership year to ensure that your Vitality Age is updated and correct.</string>
    <string name="card_action_title_choose_rewards">Choose Rewards</string> <!-- Temporary -->
...
