<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:id="@+id/feedback_tip_detail">


    <View
        android:id="@+id/item_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:background="@color/myhealth_tips_list_item_divider"
        android:visibility="visible" />

    <TextView
        android:id="@+id/feedbacktip_title"
        style="@style/MyHealthFeedbackAttributeTipTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/myhealth_feedback_attribute_tips_margin"
        android:maxLines="1" />

    <TextView
        android:id="@+id/feedbacktip_value"
        style="@style/MyHealthFeedbackAttributeTipValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/myhealth_feedback_attribute_tips_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin" />


</LinearLayout>
