<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/vitality_age_header_padding"
    app:cardCornerRadius="@dimen/vitality_age_corner_radius"
    android:id="@+id/myhealth_landing_card">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/vitality_age_light_blue"
        android:paddingLeft="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/vitality_age_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/vitality_age_disabled_large"
            tools:ignore="ContentDescription" />


        <TextView
            android:id="@+id/vitality_age_title"
            style="@style/MaterialDarkSubhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/myhealth_title_topmargin"
            android:text="@string/my_health.vitality_age_screen_title_613" />

        <FrameLayout
            android:id="@+id/vitality_age_value_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/vitality_age_title">

            <TextView
                android:id="@+id/vitality_age_value"
                style="@style/VitalityAgeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:layout_marginBottom="@dimen/myhealthcard_vitalityage_margin"
                android:layout_marginTop="@dimen/myhealthcard_vitalityage_margin"
                android:maxLength="3"
                android:maxLines="1"
                android:textSize="@dimen/vitality_age_value"
                android:visibility="visible" />

            <TextView
                android:id="@+id/vitality_age_value_placeholder"
                style="@style/VitalityAgeLightHeader"
                android:layout_width="@dimen/vitality_age_placeholder_width"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/myhealth_placeholder_margin_bottom"
                android:layout_marginTop="@dimen/myhealth_placeholder_margin_top"
                android:maxLines="2"
                android:visibility="gone" />
        </FrameLayout>


        <LinearLayout
            android:id="@+id/vitality_age_subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/vitality_age_value_layout"
            android:layout_marginBottom="@dimen/vitality_age_subheader"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/va_status_icon"
                android:layout_width="@dimen/vitality_age_status_icon"
                android:layout_height="@dimen/vitality_age_status_icon"
                android:layout_gravity="left"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/vitality_age_summary"
                style="@style/VitalityAgeStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="@dimen/vitality_age_status_icon_margin"
                android:gravity="top"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vitality_age_unknown_subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/vitality_age_bg"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/vitality_age_unknown_subheader_bottom"
            android:paddingTop="@dimen/vitality_age_unknown_subheader_top"
            android:visibility="gone">

            <ImageView
                android:id="@+id/va_unknown_icon"
                android:layout_width="@dimen/vitality_age_status_icon"
                android:layout_height="@dimen/vitality_age_status_icon"
                android:src="@drawable/learn_more_24"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/vitality_age_unknown_summary"
                style="@style/VitalityAgeStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="@dimen/vitality_age_status_icon_margin"
                android:gravity="top"
                android:maxLines="1"
                android:text="@string/learn_more_button_title_104" />
        </LinearLayout>

        <TextView
            android:id="@+id/vitality_age_explanation"
            style="@style/MaterialDarkBody1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/vitality_age_subheader"
            android:layout_marginBottom="@dimen/vitality_age_explanation_bottom"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
    </RelativeLayout>
</android.support.v7.widget.CardView>