...
        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/root_coordinator_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.v4.widget.DrawerLayout
            android:id="@+id/activity_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...

                <include layout="@layout/toolbar" />

            </FrameLayout>

            <android.support.design.widget.NavigationView
                android:id="@+id/navigation_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:background="@android:color/white"
                app:headerLayout="@layout/navigation_drawer_header"
                app:menu="@menu/drawer_view" />
...
