...
                        android:layout_gravity="fill_horizontal"
                        android:layout_weight="1"
                        android:text="@string/Settings.membership_pass_911" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/events_feed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/profile_link_padding_top_bottom"
                    android:paddingTop="@dimen/profile_link_padding_top_bottom">

                    <ImageView
...
